# rpi-kodi-amp

./: .gitignore  CMakeLists.txt  README.md
script.amplifier/: addon.xml  main.py
src/: amplifier.cpp  amplifier.h  main.cpp
src/lib/: wire.cpp  wire.h
src/parts/: pt2322.cpp  pt2322.h  pt2323.cpp  pt2323.h
